[project]
name = "travel-reimbursement-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
